--- a/access/point/barcode-generated.html
+++ b/access/point/barcode-generated.html
@@ -45,7 +45,7 @@
     </style>
     <body>
       <div class="card-body">
-        <img src="assets/images/barcode.jpg" class="card-img-top" style="height:400px; width:400px;">
+        <img src="assets/images/fullerror.jpg" class="card-img-top" style="height:400px; width:400px;">
 
         <h3 style="font-size: 60px; color: rgb(14, 83, 161);">Barcode <br>Generated Successfully</h3>
 
