--- a/access/point/barcode-generated.html
+++ b/access/point/barcode-generated.html
@@ -47,7 +47,7 @@
       <div class="card-body">
         <img src="assets/images/fullerror.jpg" class="card-img-top" style="height:400px; width:400px;">
 
-        <h3 style="font-size: 60px; color: rgb(14, 83, 161);">Barcode <br>Generated Successfully</h3>
+        <h3 style="font-size: 60px; color: rgb(14, 83, 161);">An Error Has Occured. <br>Please Try Again</h3>
 
       </div>
 
